force-app/main/default/objects/Action_Plans_Settings__c/fields/Use_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Use_Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reserved for future functionality</description>
    <inlineHelpText>Should Task Due Dates be postponed to the next day that is in the specified Business Hours record?</inlineHelpText>
    <label>Use Business Hours</label>
    <type>Checkbox</type>
</CustomField>